--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rita-Ryuunosuke Link</title>
+    <title>My profile</title>
 </head>
 <body>
-    <a href="https://www.facebook.com/SoNguyenTo216" style="text-decoration: none"> 🚀 🚀 My facebook profile </a>
+    <div>Name: Tran Tuan Anh</div>
+    <div>email: tuananh2106a2@gmail.com</div>
 </body>
 </html>
